# NT_MT5_Adapter

./: .gitignore  ADAPTER_COMPLIANCE.md  Adapter_Backtest_Test.py  Cargo.toml  MT5_BINDINGS_FIX_GUIDE.md  MT5_REST_API_Documentation.md  MT5_Rest_Server.py  README.md  RECAP.md  TODO_MT5_ADAPTER.md  adapterdoc.txt  backtest_mt5_example.py  build_mt5_adapter.bat  build_mt5_adapter.sh  build_mt5_python_bindings.bat  check_instruments.py  demo_mt5_backtest.py  mt5_config.py  mt5_nautilus_backtest.py  pyproject.toml  simple_test.rs  test_compilation.rs  test_import.py  test_mt5_bindings.py  test_mt5_features.py
.github/workflows/: build.yml
crates/adapters/mt5/: CLEANUP_SUMMARY.md  Cargo.toml  README.md
crates/adapters/mt5/src/: bindings.rs  config.rs  consts.rs  credential.rs  data_client.rs  enums.rs  error.rs  execution_client.rs  instrument_provider.rs  lib.rs
crates/adapters/mt5/src/client/: http.rs  mod.rs  ws.rs
crates/adapters/mt5/src/common/: consts.rs  credential.rs  enums.rs  mod.rs  models.rs  parse.rs  symbol.rs  testing.rs  urls.rs
crates/adapters/mt5/src/config/: data_client.rs  execution_client.rs  instrument_provider.rs
crates/adapters/mt5/src/data/: mod.rs
crates/adapters/mt5/src/execution/: mod.rs
crates/adapters/mt5/src/http/: client.rs  error.rs  mod.rs  models.rs  parse.rs  query.rs  rest_client.rs
crates/adapters/mt5/src/python/: bindings.rs  mod.rs
crates/adapters/mt5/src/websocket/: client.rs  enums.rs  error.rs  handler.rs  messages.rs  mod.rs  parse.rs
crates/adapters/mt5/test_data/: http_get_symbols.json
crates/adapters/mt5/tests/: integration_tests.rs
data/: EURUSD_M1_bars.csv
exemple adapter/: Cargo.toml
nautilus_mt5/: __init__.py  bindings.py  client.py  common.py  factories.py  providers.py
nautilus_mt5_adapter/: __init__.py  bindings.py  bindings.pyi  config.py  data.py  execution.py  factories.py  providers.py
nautilus_trader/: __init__.py
nautilus_trader/adapters/: __init__.py
nautilus_trader/adapters/metatrader5/: __init__.py  bindings.py  common.py  config.py  data.py  execution.py  factories.py  providers.py
nautilus_trader/adapters/mt5/: __init__.py  bindings.py  config.py  data.py  execution.py  factories.py  providers.py
nautilus_trader/adapters/mt5/tests/: __init__.py  test_integration.py
other/: RECAP.md  TODO.md
python/nautilus_mt5/: __init__.py  __init__.pyi  bindings.py  client.py  constants.py  data.py  execution.py
test_data/: account_info.json  rates.json  symbols.json
tests/: test_backtest.py  test_bindings.py  test_data.py  test_live_orders.py  test_live_strategy.py  testbindings.py
