[workspace]
members = [
    "crates/adapters/mt5",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ustr = "1.0"
derive_builder = "0.12"
thiserror = "1.0"
pyo3 = { version = "0.20", features = ["extension-module"] }

# Dev dependencies
[workspace.dependencies.axum]
version = "0.6"

[workspace.dependencies.tokio-test]
version = "0.4"

[workspace.dependencies.wiremock]
version = "0.5"
