[workspace]
members = [
    "crates/adapters/mt5",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
ustr = "1.0"
derive_builder = "0.20.2"
thiserror = "2.0.17"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
base64 = "0.22.1"

# Dev dependencies
[workspace.dependencies.axum]
version = "0.8.6"

[workspace.dependencies.tokio-test]
version = "0.4"

[workspace.dependencies.wiremock]
version = "0.6.5"
