[workspace]
members = [
    "crates/adapters/mt5",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
ustr = "1.0"
derive_builder = "0.20.2"
thiserror = "2.0.17"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
pyo3-async-runtimes = "0.26"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
async-trait = "0.1"
dashmap = "6.0"
futures = "0.3"

# Nautilus dependencies
nautilus-common = "0.51.0"
nautilus-core = "0.51.0"
nautilus-data = "0.51.0"
nautilus-execution = "0.51.0"
nautilus-model = "0.51.0"
nautilus-network = "0.51.0"
nautilus-testkit = "0.51.0"

# Dev dependencies
[workspace.dependencies.axum]
version = "0.8.6"

[workspace.dependencies.tokio-test]
version = "0.4"

[workspace.dependencies.wiremock]
version = "0.6.5"

[workspace.dependencies.criterion]
version = "0.7.0"

[workspace.dependencies.rstest]
version = "0.26.1"

[workspace.dependencies.tracing-test]
version = "0.2"

[workspace.dependencies.url]
version = "2.0"

[workspace.dependencies.tracing-subscriber]
version = "0.3"
