[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nautilus-adapters-mt5"
version = "0.1.0"
description = "MetaTrader 5 adapter for NautilusTrader"
authors = [
    {name = "Nautech Systems", email = "contact@nautechsystems.io"}
]
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["python-bindings"]
manifest-path = "crates/adapters/mt5/Cargo.toml"
module-name = "nautilus_adapters_mt5"

[tool.maturin.target]
# Add target-specific configurations if needed