[build-system]
requires = ["maturin>=1.0,<2.0", "setuptools>=61.0"]
build-backend = "maturin"

[project]
name = "nautilus-mt5"
version = "0.1.0"
description = "MetaTrader 5 adapter for NautilusTrader"
authors = [
    {name = "Nautech Systems", email = "contact@nautechsystems.io"}
]
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "nautilus_trader>=1.200.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["python-bindings"]
manifest-path = "crates/adapters/mt5/Cargo.toml"
module-name = "nautilus_mt5"
python-source = "python"

# Include the Python adapter package
[tool.setuptools.packages.find]
where = ["."]
include = ["nautilus_mt5_adapter*"]

# Pyright configuration
[tool.pyright]
include = ["nautilus_mt5_adapter", "python"]
pythonVersion = "3.12"
typeCheckingMode = "basic"