[package]
name = "nautilus-adapters-mt5"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Nautilus Trader Team"]
license = "LGPL-3.0-or-later"
description = "MetaTrader 5 adapter for Nautilus Trader"
repository = "https://github.com/nautechsystems/nautilus-trader"

[dependencies]
nautilus-common = { workspace = true }
nautilus-core = { workspace = true }
nautilus-data = { workspace = true }
nautilus-execution = { workspace = true }
nautilus-model = { workspace = true }
nautilus-network = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
ustr = { workspace = true }
derive_builder = { workspace = true }
thiserror = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"], optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
nautilus-testkit = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }
tracing-test = { workspace = true }
url = { workspace = true }
axum = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }

[features]
default = []
python = [
 "nautilus-common/python",
  "nautilus-core/python",
  "nautilus-data/python",
 "nautilus-execution/python",
  "nautilus-model/python",
  "nautilus-network/python",
  "pyo3",
  "pyo3-async-runtimes",
]
python-bindings = ["python"]
extension-module = [
  "nautilus-common/extension-module",
  "nautilus-core/extension-module",
  "nautilus-data/extension-module",
  "nautilus-execution/extension-module",
  "nautilus-model/extension-module",
  "nautilus-network/extension-module",
  "python",
  "pyo3/extension-module",
]

[lib]
name = "nautilus_adapters_mt5"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
